# set10108

./: .gitignore  LICENSE  README.md
labs/contrib/sfml/lib/Debug/: sfml-audio-d-2.ilk  sfml-audio-d.exp  sfml-audio-d.lib  sfml-graphics-d.exp  sfml-graphics-d.lib  sfml-main-d.lib  sfml-network-d-2.ilk  sfml-network-d.exp  sfml-network-d.lib  sfml-system-d-2.ilk  sfml-system-d.exp  sfml-window-d-2.ilk  sfml-window-d.exp  sfml-window-d.lib
labs/contrib/sfml/lib/Release/: sfml-audio.exp  sfml-audio.lib  sfml-graphics.exp  sfml-graphics.lib  sfml-main.lib  sfml-network.exp  sfml-network.lib  sfml-system.exp  sfml-window.exp  sfml-window.lib
labs/cw1/: CMakeLists.txt  main.cpp
labs/cw1/dataset/: edgar_allan_poe.txt
labs/cw2/: CMakeLists.txt  main.cpp
labs/lab01/: CMakeLists.txt  README.md  monte-carlo-pi.cpp  timing.cpp
labs/lab02/: CMakeLists.txt  README.md  pipeline.cpp  pipeline_solution.cpp  thread_pool.cpp  thread_pool_solution.cpp
labs/lab03/: CMakeLists.txt  README.md  atomic-flag.cpp
labs/lab04/: CMakeLists.txt  README.md  bubble-sort.cpp  parallel-sort.cpp
labs/lab05/: README.md  simd-add.cpp
labs/lab06/: README.md  hello.cu  vec-add.cu
labs/lab06b/: CMakeLists.txt  README.md  smooth-2d.cu
labs/lab07/: CMakeLists.txt  README.md  info-opencl.cpp
labs/lab08/: CMakeLists.txt  README.md  image-rotate.cpp  mandelbrot.cpp
labs/lab09/: README.md  hello_cluster.cpp  mandelbrot.sh  stitch.cpp
labs/unit1/: CMakeLists.txt  README.md  cache-test.cpp  linear-index.cpp  timing.cpp
labs/unit2/: CMakeLists.txt  info.cu
labs/unit3/: CMakeLists.txt  README.md
labs/unit4/: CMakeLists.txt  README.md  vec-add.cpp
labs/unit5/: CMakeLists.txt  mandelbrot.cpp  monte-carlo-pi.cpp  monte-carlo-pi.cu
labs/unit6/: CMakeLists.txt  README.md  monte-carlo-pi-extension.cpp  multiple_tasks.cpp
labs/unit7/: CMakeLists.txt
labs/unit8a/: CMakeLists.txt  trapezoidal.cpp
labs/unit8b/: CMakeLists.txt  README.md
labs/unit9/: hello_cluster.sh  mandelbrot.cpp  mandelbrot_and_stitch.sh  stitch.sh
